--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 service: 
   snake:
-    image: 'quanch/chat_app_docker_repo'
+    image: 'quanch/chat_app_docker_repo:latest'
     enviornment:
     - 'port: 3000'
   ports:
