--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   chat:
     image: 'quanch/chat_app_docker_repo:latest'
     enviornment:
-    - 'port: 3000'
+    - "port: 3000"
   ports:
-    - '80:3000'
+    - "80:3000"
   volumes:
     - ./:app
